test/error3.frt.test
ERROR
Error at "error3.frt:1:15" : expected [ but got :